Fixed a lot of little issues on the css (blury icons, gamelist icons and gap, some text and button positions). Improved background color circle and added glass effect on it.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,10 +16,11 @@ html {
 	font-family: 'Inter', sans-serif;
 	color: white;
 	background:
-		radial-gradient(circle at bottom left, rgba(255, 0, 204, 0.3), transparent 30%),
-		radial-gradient(circle at bottom right, rgba(0, 102, 255, 0.3), transparent 30%),
+		radial-gradient(circle at bottom left, rgba(255, 0, 204, 0.3), transparent 50%),
+		radial-gradient(circle at bottom right, rgba(0, 102, 255, 0.3), transparent 50%),
 		linear-gradient(to bottom, #000000, #000000);
 	min-height: 100vh;
+	z-index: 1;
 }
 
 body {
@@ -28,6 +29,15 @@ body {
 	color: #fff;
 	text-align: center;
 	margin: 0;
+
+}
+
+.frosted-glass {
+	position: absolute;
+	height: 100%;
+	background: linear-gradient(to bottom,#000000cb,#2e2e2e56);
+	backdrop-filter: blur(100px);
+	border-radius: 15px;
 }
 
 /* Custom scrollbar styling */
@@ -73,6 +83,7 @@ option {
 .game-card.hidden {
 	display: none;
 }
+
 /* ====================== SCROLLBAR ====================== */
 ::-webkit-scrollbar {
 	width: 8px;
