--- a/src/css/styles/game-library.css
+++ b/src/css/styles/game-library.css
@@ -4,34 +4,21 @@
 	top: 0;
 	display: flex;
 	padding-top: 5px;
-	padding-right:10px;
-	padding-bottom:5px;
-	padding-left:10px;
+	padding-right: 10px;
+	padding-bottom: 5px;
+	padding-left: 10px;
 
 	background: rgba(0, 0, 0, 0.8);
 	align-items: center;
 	justify-content: space-between;
-	backdrop-filter: blur(1px);
 	z-index: 100;
 }
-.topbar img {
-	width: auto;
-	height: 7vh;
+
+.topbar img.logo {
+	width: 10%;
+	height: 10%;
+	margin-bottom: 0px;
 	object-fit: contain;
-}
-.topbar img:first-child {
-	width: auto;
-	height: 7vh;
-	object-fit: contain;
-}
-.topbar img:last-child {
-	width: auto;
-	height: 5vh;
-	object-fit: contain;
-}
-.topbar img:hover {
-	transform: scale(1.05);
-	transition: transform 0.2s ease-in-out;
 }
 
 .topbar-content {
@@ -54,14 +41,15 @@
 .right-group {
 	display: flex;
 	align-items: center;
-	gap: 10px;
+	gap: 15px;
 	margin-left: auto;
 }
 
 .right-group img {
-	width: 50px;
-	height: 50px;
-	object-fit: fit;
+	padding: 0;
+	width: 60%;
+	height: 60%;
+	object-fit: contain;
 	transition: all 0.2s ease-out;
 }
 
@@ -100,9 +88,11 @@
 }
 
 /* Title on the left */
+
 .library-header .title {
 	margin: 0;
-	margin-left: 3vw;
+	padding-left: 5px;
+	margin-left: 1%;
 	color: rgba(245, 245, 245, 0.90);
 	font-family: 'Brunson', sans-serif;
 	font-size: auto;
@@ -112,6 +102,7 @@
 	white-space: nowrap;
 	transition: font-size 0.3s ease;
 }
+
 /* ========================= TITLES ========================= */
 
 .library-header .title:focus-visible {
@@ -135,21 +126,32 @@
 
 /* ========================= GAME CARD ========================= */
 .game-card {
+	display: flex;
+	flex-direction: column;
 	width: 12vw;
 	height: 17vw;
 	margin: 5px;
-	background: linear-gradient(145deg, #1e2a3a, #2a3a4a);
-	border-radius: 10px;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	text-align: center;
-	color: #fff;
 	padding: 1%;
+
+	border-radius: 10px;
+	background: rgba(30, 30, 45, 0.6);
 	background-size: auto;
 	background-position: center;
-	transition: transform 0.2s;
+	justify-content: center;
+	align-items: center;
+	
+	text-align: center;
+	color: #fff;
+	
+	image-rendering: optimizeQuality;
+	backdrop-filter: blur(10px);
+	border: 1px solid rgba(255, 255, 255, 0.1);
+	transition: all 0.3s ease;
+}
+
+.game-card:hover {
+	transform: translateY(-5px);
+	box-shadow: 0 10px 20px rgba(0, 102, 255, 0.3);
 }
 
 .game-card div {
@@ -166,6 +168,7 @@
 
 .game-card div:hover {
 	transform: scale(1.02);
+	image-rendering: optimizeQuality;
 	background-color: linear-gradient(145deg, #2a3a4a, #3a4a5a);
 }
 
@@ -179,27 +182,15 @@
 
 .game-card.running div::after {
 	content: "Running";
+	width: 100%;
+	height: 100%;
+
 	background: linear-gradient(to top, rgba(0, 0, 0, 0.8), transparent);
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	color: #fff;
 	border-radius: 10px;
-	height: 100%;
-	width: 100%;
-}
-
-
-.game-card {
-	background: rgba(30, 30, 45, 0.6);
-	backdrop-filter: blur(10px);
-	border: 1px solid rgba(255, 255, 255, 0.1);
-	transition: all 0.3s ease;
-}
-
-.game-card:hover {
-	transform: translateY(-5px);
-	box-shadow: 0 10px 20px rgba(0, 102, 255, 0.3);
 }
 
 /* ========================= GAME PREVIEW ========================= */
@@ -214,6 +205,7 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
+	
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
