--- a/src/css/styles/sidebar.css
+++ b/src/css/styles/sidebar.css
@@ -25,7 +25,7 @@
 
 .sidebar li {
 	padding: 5px;
-	margin: 5px 0;
+	margin: 2px 0;
 	background-color: rgba(37, 66, 94, 0.479);
 	flex-direction: row;
 
@@ -138,11 +138,17 @@
 /* ========================= GAME LIST ========================= */
 
 .sidebar-content {
-	flex: 2;
+	display: flex;
+	width: 100%;
 	overflow-y: auto;
 	overflow-x: hidden;
-	width: 100%;
-	gap: 1px;
+}
+
+h5 .sidebar-content {
+	overflow-x: hidden;
+	text-overflow: ellipsis;
+	position: relative;
+	left: 5px;
 }
 
 .game-list {
@@ -151,21 +157,32 @@
 	margin: 0;
 }
 
-.game-list-icon {
+.icon-container{
+	flex: left;
+	width: 30px;
+	height: 30px;
+	overflow: hidden;
+	border-radius: 10px;
+	margin-right: 5px;
+}
+.game-list-icon{
 	margin: 0 2%;
-	width: 20px;
-	height: 26px;
-	border-radius: 5px;
+	width: 30px;
+	height: 30px;
+	transform: scale(1.5);
+	image-rendering: optimizeQuality;
 }
 
 .game-list-item {
 	display: flex;
-	height: 25px;
+	min-height:25px;
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
 	background-color: #444;
 	border-radius: 5px;
+	margin: 0;
+	padding: 0%;
 }
 
 /* Responsive adjustments */
